Trying something else with colours.

--- a/css/bass.css
+++ b/css/bass.css
@@ -855,7 +855,7 @@ body {
 }
 
 a {
-  color: #007FFF;
+  color: #FFAA00;
   text-decoration: none;
 }
 
@@ -876,7 +876,7 @@ hr {
 
 .button {
   color: white;
-  background-color: #007FFF;
+  background-color: #FFAA00;
   border-radius: 3px;
   transition-duration: .05s;
   transition-timing-function: ease-out;
@@ -912,7 +912,7 @@ hr {
 
 .field-light:focus {
   outline: none;
-  border-color: #007FFF;
+  border-color: #FFAA00;
   box-shadow: 0 0 0 2px rgba(0, 127, 255, 0.5);
 }
 
@@ -1110,7 +1110,7 @@ input[type=range] {
   box-shadow: none;
 }
 
-.button-transparent:hover:before, 
+.button-transparent:hover:before,
 .button-transparent:focus:before {
   opacity: .09375;
 }
@@ -1118,7 +1118,7 @@ input[type=range] {
 .button-transparent:focus {
   outline: none;
   border-color: transparent;
-  box-shadow: 0 0 0 2px; 
+  box-shadow: 0 0 0 2px;
 }
 
 .button-transparent:active,
@@ -1191,7 +1191,7 @@ input[type=range] {
 .white { color: #fff }
 
 .aqua  { color: #7fdbff }
-.blue  { color: #007FFF }
+.blue  { color: #FFAA00 }
 .navy  { color: #001f3f }
 .teal  { color: #39cccc }
 .green { color: #2ecc40 }
@@ -1211,7 +1211,7 @@ input[type=range] {
 .bg-white  { background-color: #fff }
 
 .bg-aqua  { background-color: #7fdbff }
-.bg-blue  { background-color: #007FFF }
+.bg-blue  { background-color: #FFAA00 }
 .bg-navy  { background-color: #001f3f }
 .bg-teal  { background-color: #39cccc }
 .bg-green { background-color: #2ecc40 }
@@ -1231,7 +1231,7 @@ input[type=range] {
 .bg-darken-4 { background-color: rgba(0,0,0,.5) }
 
 .border-aqua  { border-color: #7fdbff }
-.border-blue  { border-color: #007FFF }
+.border-blue  { border-color: #FFAA00 }
 .border-navy  { border-color: #001f3f }
 .border-teal  { border-color: #39cccc }
 .border-green { border-color: #2ecc40 }
