--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -70,7 +70,7 @@ layout: default
       </ul>
 
       {% if page.tips %}
-      <h4 class="blue mt0 mb2 xs-center">{{ site.translation[site.language].directions }}</h4>
+      <h4 class="blue mt0 mb2 xs-center">{{ site.translation[site.language].tips }}</h4>
       <ul itemprop="recipeInstructions">
         <!-- lists tips for the recipe -->
         {% for tip in page.tips %}
