Moving tips to the appropriate section.

--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -78,6 +78,7 @@ layout: default
         {% endfor %}
       </ul>
       {% endif %}
+
     </div>
 
   </div>
@@ -123,6 +124,15 @@ layout: default
         <li>{{ item | markdownify }}</li>
         {% endfor %}
       </ul>
+
+      {% if page.tips %}
+      <h4 class="blue mt0 mb2 xs-center">{{ site.translation[site.language].tips }}</h4>
+      <ul itemprop="recipeInstructions">
+        {% for tip in page.tips %}
+        <li>{{ tip | markdownify }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
 
     {% endif %}
     {% endfor %}
